fix: modal halfs aligned to figma

--- a/src/app/features/contacts/contacts.scss
+++ b/src/app/features/contacts/contacts.scss
@@ -459,7 +459,7 @@
   border-radius: 24px;
   overflow: hidden;
   width: 65%;
-  max-width: 700px;
+  max-width: 1212px;
   min-width: 320px;
   height: 55%;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.18);
@@ -473,8 +473,8 @@
   flex-direction: column;
   align-items: flex-start;
   min-width: 220px;
-  width: 396px;
-  height: 352px;
+  width: 467px;
+  height: 594px;
   gap: 12px;
   justify-content: center;
 }
@@ -507,12 +507,22 @@
   right: 10px;
   background: none;
   border: none;
-  font-size: 1.5em;
+  font-size: 2em;
+  color: #2A3647;
   cursor: pointer;
-  z-index: 10;
+  z-index: 20;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
   &:hover {
     opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
   }
 }
 
@@ -1007,7 +1017,17 @@
   }
 
   .modal-left {
-    padding: 32px 24px;
+      background: #2A3647;
+      color: #fff;
+      padding: 66px 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      min-width: 220px;
+      width: 396px;
+      height: 352px;
+      gap: 12px;
+      justify-content: center;
   }
 
   .left-text {
